--- a/src/app/menu/admin-menu/admin-menu.component.html
+++ b/src/app/menu/admin-menu/admin-menu.component.html
@@ -165,6 +165,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerRh/all-poste']">
+            <i class="mdi mdi mdi-briefcase menu-icon"></i>
+            <span class="menu-title">Fiche de poste</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
             <i class="mdi mdi-circle-outline menu-icon"></i>
             <span class="menu-title">UI Elements</span>
