--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -118,7 +118,7 @@
             <span class="nav-profile-name">{{username}}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-            <a class="dropdown-item" [routerLink]="['/managerRh/profile']">
+            <a class="dropdown-item" [routerLink]="['/managerService/profile']">
               <i class="mdi mdi-settings text-primary"></i>
               Mon Compte
             </a>
