--- a/src/app/menu/collab-menu/collab-menu.component.html
+++ b/src/app/menu/collab-menu/collab-menu.component.html
@@ -151,7 +151,12 @@
             <span class="menu-title">Postes</span>
           </a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/collaborateur/mes-postulations']">
+            <i class="mdi mdi-folder-multiple menu-icon"></i>
+            <span class="menu-title">Mes Candidatures</span>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
             <i class="mdi mdi-circle-outline menu-icon"></i>
