--- a/src/app/Admin/Collaborateur/List/allcollab/allcollab.component.html
+++ b/src/app/Admin/Collaborateur/List/allcollab/allcollab.component.html
@@ -133,7 +133,7 @@
                 <div>
                 <!-- Ajoutez le sélecteur de filtre -->
                 <div class="d-flex justify-content-end mb-3">
-                  <button type="button"  class="btn btn-inverse-primary" (click)="ToList()">+Collaborateur </button>
+                  <button type="button"  class="btn btn-inverse-primary" (click)="openModal()">+Collaborateur </button>
                 </div>    
               <!-- Ajoutez une barre de recherche -->
 
