--- a/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
+++ b/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
@@ -1,5 +1,5 @@
 <style>
-    /* Style pour les champs de saisie invalides */
+
         .disabled-cursor {
           cursor: not-allowed; /* Utiliser le curseur "not allowed" lorsque le bouton est désactivé */
         }
@@ -33,16 +33,19 @@
         .progress-bar-strength {
             transition: width 0.3s ease; /* Animation fluide de la largeur */
         }
-        
-            
-            </style>
+</style>
  <div class="card">
   <div class="card-body">
     <h4 class="card-title">Fiche de poste</h4>
     <hr>
     <form [formGroup]="managerServiceForm" (ngSubmit)="onSubmit()">
-      <div>
-        <p class="card-description">Ajout Fiche de poste</p>
+  
+      <div *ngIf="currentStep === 1">
+        <div class="d-flex justify-content-end">
+          <a  class="btn btn-link" (click)="nextStep()">
+            <p> <i class="mdi mdi-arrow-right"> </i>   </p>  </a>  
+          </div>
+                  <p class="card-description">Ajout Fiche de poste</p>
         <div class="row">
           <div class="col-md-6">
             <!-- Titre input -->
@@ -60,20 +63,6 @@
           <div class="col-md-6">
             <!-- Description input -->
             <div class="form-group">
-              <label for="description">Description</label>
-              <textarea type="text" class="form-control" id="description" formControlName="description" placeholder="Description" required
-                [ngClass]="{ 'is-invalid': managerServiceForm.get('description')?.invalid && managerServiceForm.get('description')?.touched }"></textarea>
-              <div *ngIf="managerServiceForm.get('description')?.invalid && managerServiceForm.get('description')?.errors?.['required'] && managerServiceForm.get('description')?.touched"
-                class="custom-error-message">
-                La description est obligatoire
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <!-- Nombre de Postes Disponibles input -->
-            <div class="form-group">
               <label for="nombrePostesDisponibles">Nombre de Postes Disponibles</label>
               <input type="number" class="form-control" id="nombrePostesDisponibles" formControlName="nombrePostesDisponibles" placeholder="Nombre de Postes Disponibles" required
                 [ngClass]="{ 'is-invalid': managerServiceForm.get('nombrePostesDisponibles')?.invalid && managerServiceForm.get('nombrePostesDisponibles')?.touched }">
@@ -84,35 +73,67 @@
             </div>
           </div>
         </div>
-        
         <div class="row">
           <div class="col-md-6">
-            <!-- Domaine de competence select box -->
             <div class="form-group">
-              <label for="domain">Domaine de competence:</label>
-              <select id="domain" class="form-control" formControlName="domain">
-                <option value="" disabled selected>-- Sélectionnez un domaine de competence--</option>
-                <option *ngFor="let domain of domains" [value]="domain">{{ domain }}</option>
-              </select>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <!-- Compétences select box -->
-            <div class="form-group">
-              <div class="btn-group" dropdown>
-                <a id="multiselectBtn" type="button" class="btn btn-link dropdown-toggle" dropdownToggle>
-                  Sélectionnez des compétences
-                </a>
-                <div *dropdownMenu aria-labelledby="multiselectBtn">
-                  <a type="button" class="dropdown-item" *ngFor="let competence of allCompetences" (click)="toggleCompetenceSelection(competence)">
-                    {{ competence.nom }}
-                    <span *ngIf="isCompetenceSelected(competence)" class="float-right">✔</span>
-                  </a>
-                </div>
+              <label for="description">Description</label>
+              <textarea type="text" class="form-control" id="description" formControlName="description" placeholder="Description" required
+                [ngClass]="{ 'is-invalid': managerServiceForm.get('description')?.invalid && managerServiceForm.get('description')?.touched }"></textarea>
+              <div *ngIf="managerServiceForm.get('description')?.invalid && managerServiceForm.get('description')?.errors?.['required'] && managerServiceForm.get('description')?.touched"
+                class="custom-error-message">
+                La description est obligatoire
               </div>
             </div>
+            <!-- Nombre de Postes Disponibles input -->
+           
           </div>
         </div>
+        </div>
+        <div class="popup">
+          <div *ngIf="currentStep === 2">
+            <div class="d-flex justify-content-start">
+              <a  class="btn btn-link" (click)="Step()">
+                <p> <i class="mdi mdi-arrow-left"> </i>   </p>   </a> 
+            </div>
+            <p class="card-description">
+              Ajouter des competences pour  </p>
+            <form>
+              <div >
+                <label>Rechercher une compétence:</label>
+                <input type="text"  class="form-control" [(ngModel)]="searchTerm" (input)="searchCompetences()" name="searchTerm">
+                <!-- Affichage des résultats de la recherche -->
+                <ul *ngIf="searchResults.length > 0">
+                  
+                    <li *ngFor="let competence of searchResults" (click)="selectCompetence(competence)">
+                        {{ competence.nom }}
+                       
+                    </li>
+       
+                </ul>
+                <!-- Message si aucune compétence n'est trouvée -->
+                  <p *ngIf="searchResults.length === 0 && searchTerm.length >= 3 ">Aucune compétence trouvée.</p>
+        
+              </div>
+
+<div>
+  <p>Compétences sélectionnées:</p>
+  <ul>
+    <li *ngFor="let competence of selectedCompetences">
+      {{ competence.nom }} <!-- Accès à la propriété 'nom' de chaque compétence -->
+      <button (click)="cancelSelection(competence)" class="btn btn-link" >Annuler</button>
+
+    </li>
+  </ul>
+</div>
+
+            </form>
+           </div>
+        
+        
+            
+        
+        
+     
         <div class="d-flex justify-content-end">
           <button type="submit" class="btn btn-primary mr-2">Ajouter</button>
         </div>
